--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	<section class="hero container">
 		<h2>An Important Event with Saint Paul Town Hall</h2>
-		<p>Saint Paul Town Hall will be hosting an important event for the community. 
+		<p>Saint Paul Town Hall will be hosting an important event for the community. <br>
 			Join us this September!</p>
 		<a class="btn btn-alt" href="register.html">Register Now</a>
 	</section>
